<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/clouds"
    tools:context="com.example.testespeechfinal.SplashActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="178dp"
            android:layout_height="209dp"
            android:layout_gravity="center"
            android:layout_marginTop="-10dp"
            android:src="@drawable/ps_icone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" 
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="73dp"
                    android:layout_height="60dp"
                    android:src="@drawable/blue" />

                <TextView
                    android:id="@+id/tv_init"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/str_init"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/gray" />

            </LinearLayout>
                
                
		        <LinearLayout
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content" 
		            android:layout_marginLeft="10dp">
		
		            <ImageView
		                android:id="@+id/imageView3"
		                android:layout_width="60dp"
		                android:layout_height="60dp"
		                android:src="@drawable/green" />
		
		            <TextView
		                android:id="@+id/textView2"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_marginTop="20dp"
		                android:text="@string/str_reconhecido"
		                android:textAppearance="?android:attr/textAppearanceMedium"
		                android:textColor="@color/gray" />
		
		        </LinearLayout>
		        <LinearLayout
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content" 
		            android:layout_marginLeft="10dp">
		
		            <ImageView
		                android:id="@+id/imageView4"
		                android:layout_width="60dp"
		                android:layout_height="60dp"
		                android:src="@drawable/red" />
		
		            <TextView
		                android:id="@+id/textView3"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_marginTop="20dp"
		                android:text="@string/str_erro"
		                android:textAppearance="?android:attr/textAppearanceMedium"
		                android:textColor="@color/gray" />
		
		        </LinearLayout>
		        <LinearLayout
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content" 
		            android:layout_marginLeft="10dp">
		
		            <ImageView
		                android:id="@+id/imageView5"
		                android:layout_width="60dp"
		                android:layout_height="60dp"
		                android:src="@drawable/white" />
		
		            <TextView
		                android:id="@+id/textView4"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_marginTop="20dp"
		                android:text="@string/str_ouvindo"
		                android:textAppearance="?android:attr/textAppearanceMedium"
		                android:textColor="@color/gray" />
		
		        </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/str_com"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/darkblue" />

    </LinearLayout>

</RelativeLayout>